2011-03-24 0.9 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* Add loading of Opac data as a scheduler job
	* Add conversion of History CSV data as a scheduler job
	* Add a scheduler job to perform all data fetching/conversion/import in one go
	* improve documentation

2011-03-14 0.8 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* introduce two display styles (old vs. improved) for the tree
	* store all search queries _completely_ in the database
	* remove options for different query styles
	* simplify extension search setup: only provide a single URL
	* move CSS into separate files
	* remove superfluous dependency on nkwlib

2011-02-28 - 0.7 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* provide a display style using menus
	* download hit counts from Opac
	* display hit counts in tree style

2011-02-23 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* add child count to database (instead of yes/no information)

2011-02-23 Sven-S. Porst <porst@sub.uni-goettingen.de>
	* major code cleanup
	* single code path for Ajax and non Ajax case
	* correct order of display in non Ajax case

2011-02-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Removed Ajax spinner Icon and loading-message
	* Fixed deprecated function ereg-replace
	* Determine whether jQuery nonClonflict Mode shall be used or not
	* Fixed link to index.php

2011-02-10 - 0.0.24 - Sven-S. Porst <porst@sub.uni-goettingen.de>
	* fix reliance on Typo3 being at document root
	* rework import script to be more reliable/efficient/fast
	* add import of English translations from 044F $a
	* add display of English translations
	* fix quotation errors in JavaScript strings
	* cleaner display of subject names
	* use t3jquery to formalise jQuery dependency

2010-10-22 - 0.0.23 - Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* jQuery Statusmeldung internationalisiert und in locallang.xml ausgelagert

2010-09-24 - 0.0.22 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
	* UI and AJAX changes